feat: deploy activation user
